--- a/style.css
+++ b/style.css
@@ -54,3 +54,14 @@ h2 {
     width: 80px;
     background-color: black;
 }
+
+.quote-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 50px 20px 50px;
+}
+.quote-att {
+    align-self: flex-end;
+}
