--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-    display: flex;
-    flex-direction: column;
-    background-color: lightpink;
-}
 
 .header {
     display: flex;
@@ -61,7 +56,24 @@ h2 {
     justify-content: center;
     align-items: center;
     margin: 30px 50px 20px 50px;
+    background-color: lightblue;
 }
 .quote-att {
     align-self: flex-end;
+}
+
+.call-box {
+    display: flex;
+    background-color: bisque;
+    padding: 20px 40px;
+    margin: 30px 50px;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.copyright {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: blueviolet;
 }
