--- a/style.css
+++ b/style.css
@@ -1,23 +1,85 @@
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0;  
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 .header {
     display: flex;
     flex-direction: column;
-    background-color: antiquewhite;
+    padding: 10px 200px 70px 200px;  
 }
+
+.logo {
+    font-size: 24px;
+    color: rgb(221, 222, 224);
+    font-weight: 600;
+}
+
+.image-text {
+    color: #f9faf8;
+    font-size: 18px;
+}
+
+a, .hero-sub-text {
+    text-decoration: none;
+    color: #e5e7eb;
+    filter: contrast(50%);
+    font-size: 18px;
+    margin: 0; 
+}
+
+a:visited {
+    color: #e5e7eb;
+}
+
+.links {
+    display: flex;
+    gap: 25px;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 900px;
+    color: #f9faf8;
+    margin: 0;
+}
+
+button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 8px 35px;
+    background-color: #3882f6;
+    border: 0px;
+    color: #f9faf8;
+    font-size: 18px;
+    border-radius: 10px;
+    font-weight: 600;
+    margin: 15px 0px;
+}
+
 .header-top {
     display: flex;
     justify-content: space-between;
 }
 .header-body {
     display: flex;
-    margin: 50px 0px;
+    margin: 100px 0px 50px;
     justify-content: space-between;
 }
 .header-image {
-    background-color: aquamarine;
-    width: 700px;
-    height: 200px;
+    background-color: rgb(110, 116, 124);
+    width: 530px;
+    align-self: stretch;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    margin-left: 40px;
+    flex-shrink: 0;
 }
+
+
+
 
 .information {
     background-color: azure;
@@ -71,9 +133,14 @@ h2 {
     align-items: center;
 
 }
-.copyright {
+.footer {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: blueviolet;
+}
+
+.header, .footer {
+    background-color: #1F2937;
+    
 }
