--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ a, .hero-sub-text {
 
 a:visited {
     color: #e5e7eb;
+    text-decoration: none;
 }
 
 .links {
@@ -81,35 +82,44 @@ button {
 
 
 
+
+
+
+
 .information {
-    background-color: azure;
     display: flex;
     flex-direction: column;
+    padding: 10px 150px 70px;  
 }
 h2 {
     text-align: center;
+    font-size: 36px;
+    margin-bottom: 50px;
+    font-weight: 700;
+
 }
-.information-items {
+.info-box, .info-text {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
 }
 
-.info-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100px;
-    
-}
+
  
-.info-text {
+.text {
     text-align: center;
+    width: 160px;
+    color: rgb(110, 116, 124);
+    font-size: 18px;
+    margin-top: 5px; 
 }
 
 .box {
-    height: 80px;
-    width: 80px;
-    background-color: black;
+    height: 150px;
+    width: 150px;
+    border: 4px solid #3882f6;
+    border-radius: 15px;
+    
 }
 
 .quote-box {
