--- a/style.css
+++ b/style.css
@@ -102,16 +102,16 @@ h2 {
     display: flex;
     justify-content: center;
     gap: 50px;
+   
 }
 
-
- 
 .text {
     text-align: center;
     width: 160px;
     color: rgb(110, 116, 124);
     font-size: 18px;
     margin-top: 5px; 
+    
 }
 
 .box {
@@ -122,17 +122,36 @@ h2 {
     
 }
 
+
+
+
+
+
 .quote-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 30px 50px 20px 50px;
-    background-color: lightblue;
+    margin: 0px; 
+    background-color: #e5e7eb;
+    padding: 10px 300px 70px;  
+}
+.quote {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: rgb(52, 59, 71);
+    padding-left: 40px;
+    margin: 0px;
 }
 .quote-att {
     align-self: flex-end;
 }
+
+
+
+
+
 
 .call-box {
     display: flex;
