--- a/style.css
+++ b/style.css
@@ -3,19 +3,16 @@ body {
     flex-direction: column;
     margin: 0;  
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    align-items: stretch;
-    flex: 1 1 100%;
 }
 
 .header {
     display: flex;
     flex-direction: column;
     padding: 20px 200px 70px 200px;  
-    flex-wrap: wrap;
-    flex: 1 1 100%;   
+    flex-wrap: wrap; 
 }
 
-.logo {
+.hero-text {
     font-size: 24px;
     color: rgb(221, 222, 224);
     font-weight: 600;
